mobile layout flexbox.

--- a/index.html
+++ b/index.html
@@ -17,36 +17,74 @@
         text-decoration: none;
         font-size: 1rem;
       }
+      
       header {
         display: flex;
         flex-direction: row;
         width: 100%;
         height: 10vh;
+        line-height: 10vh;
         text-align: center;
+        color: white;
+        font-weight: bolder;
       }
+
       header > div {
         height: 10vh;
       }
+
       .header-left {
-        background: yellow;
+        background: orange;
         width: 100%;
       }
       .header-left-2 {
         background: yellowgreen;
         width: 100%;
       }
+
       .header-main {
         background: red;
         width: 100%;
       }
+
       .header-right {
         background: green;
         width: 100%;
       }
+
       .header-right-2 {
         background: blue;
         width: 100%;
       }
+      
+      .main {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 80vh;
+        line-height: 80vh;
+        text-align: center;
+        color: white;
+        font-weight: bolder;
+      }
+
+      .main-left {
+        background: orangered;
+        width: 100%;
+      }
+
+      .main-main {
+        background: purple;
+        width: 100%;
+      }
+
+      .main-right {
+        background: peru;
+        width: 100%;
+      }
+
+      footer{}
+
       @media all and (max-width: 800px) {
         header {
           height: 100%;
@@ -54,6 +92,18 @@
         }
         header > div {
           height: 8vh;
+        }
+      }
+
+      @media all and (max-width: 600px) {
+        .main {
+          height: 100%;
+          line-height: 100%;
+          flex-flow: column wrap;
+        }
+        .main > div {
+          height: 200px;
+          line-height: 200px;
         }
       }
     </style>
@@ -67,9 +117,9 @@
       <div class="header-right-2">5</div>
     </header>
     <div class="main">
-      <div class="main-left"></div>
-      <div class="main-main"></div>
-      <div class="main-right"></div>
+      <div class="main-left">left</div>
+      <div class="main-main">main</div>
+      <div class="main-right">right</div>
     </div>
     <footer>
       <div class="footer-left"></div>
