--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         text-decoration: none;
         font-size: 1rem;
       }
-      
+
       header {
         display: flex;
         flex-direction: row;
@@ -56,7 +56,7 @@
         background: blue;
         width: 100%;
       }
-      
+
       .main {
         display: flex;
         flex-direction: row;
@@ -83,7 +83,41 @@
         width: 100%;
       }
 
-      footer{}
+      footer {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 10vh;
+        line-height: 10vh;
+        text-align: center;
+        color: white;
+        font-weight: bolder;
+      }
+
+      .footer-left {
+        background: orange;
+        width: 100%;
+      }
+
+      .footer-left-2 {
+        background: yellowgreen;
+        width: 100%;
+      }
+
+      .footer-main {
+        background: red;
+        width: 100%;
+      }
+
+      .footer-right {
+        background: green;
+        width: 100%;
+      }
+
+      .footer-right-2 {
+        background: blue;
+        width: 100%;
+      }
 
       @media all and (max-width: 800px) {
         header {
@@ -91,6 +125,14 @@
           flex-flow: column wrap;
         }
         header > div {
+          height: 8vh;
+        }
+
+        footer {
+          height: 100%;
+          flex-flow: column wrap;
+        }
+        footer > div {
           height: 8vh;
         }
       }
@@ -122,11 +164,11 @@
       <div class="main-right">right</div>
     </div>
     <footer>
-      <div class="footer-left"></div>
-      <div class="footer-left-2"></div>
-      <div class="footer-main"></div>
-      <div class="footer-right"></div>
-      <div class="footer-right-2"></div>
+      <div class="footer-left">1</div>
+      <div class="footer-left-2">2</div>
+      <div class="footer-main">3</div>
+      <div class="footer-right">4</div>
+      <div class="footer-right-2">5</div>
     </footer>
   </body>
 </html>
